[package]
name = "passman"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.11.0-pre.2"
aead = "0.6.0-rc.0"
rand_core = "0.9.0-beta.1"
rand = { version = "0.9.0-beta.3", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
argon2 = "0.5.3"
generic-array = "0.14.7"
clap = { version = "4.5.26", features = ["derive"] }
rpassword = "7.3.1"

